[issue-12] decrease font size on tablet and above

--- a/src/stories/layouts/Footer/styles.scss
+++ b/src/stories/layouts/Footer/styles.scss
@@ -11,6 +11,6 @@
   position: fixed;
 
   @include bp-tablet {
-    font-size: $font-size-md;
+    font-size: $font-size-sm;
   }
 }
